[package]
name = "rusty_maple"
version = "0.1.0"
authors = ["ezer1025"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4.0"
dotenv = "0.15"
log = "0.4.11"
simplelog = "0.8.0"
threadpool = "1.8.1"
bytes = "0.5.6"
aes = "0.5.0"
block-modes = "0.6.1"
rand = "0.7.3"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]