[package]
name = "rusty_maple"
version = "0.1.0"
authors = ["ezer1025"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4.0"
dotenv = "0.15"
log = "0.4.11"
simplelog = "0.12.0"
threadpool = "1.8.1"
bytes = "1.3.0"
rand = "0.8.5"
r2d2 = "0.8.10"
nx = "0.3.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "time"] }
lazy_static = "1.4.0"
bcrypt = "0.13.0"
aes = "0.8.2"
ecb = "0.1.1"